Bug 263790 - multiple zombie kded4 process
Summary: multiple zombie kded4 process
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: notifier (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-20 22:19 UTC by Jesse Milette
Modified: 2011-01-21 03:33 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jesse Milette 2011-01-20 22:19:46 UTC
Version:           unspecified (using KDE 4.5.95) 
OS:                Linux

Currently I have two zombie kded4 processes.  I just restarted my computer because I had about 5 zombie kded4 processes, with the only non zombie one using about 130MB of ram.  My swap was 1GB used, which is not at normal for my system, so it could have been using more then the 130MB.

Reproducible: Sometimes

Steps to Reproduce:
start KDE, open system monitor.  notice the multiple kded4 process, all of which 1 are zombies.  I do not know how to get kded4 to start making more zombies though, I have never 5 of them on me before.
Comment 1 Robby Engelmann 2011-01-20 22:54:22 UTC
Reading this bug report I looked into System Activity and I also see 2 kded4 zombies. Thus I can confirm this behaviour although I have no idea whether this is intended to work this way. The parent process of both is the normal running kded4 process.

I use Kubuntu 10.10 with KDE 4.6 RC2.
Comment 2 Christoph Feck 2011-01-21 00:18:27 UTC
To check which module of kded4 prevents the clean shutdown of the process, please selectively disable modules, kill all remaining kded4 processes, and start kded4 again. Then logout, and watch if the process still runs.

To disable a kded4 module, use System Settings > System Administration > Startup and Shutdown > Service Manager.

Some modules cannot be disabled via the System Settings application, and you need to manually disable them by removing one of the .desktop files in
KDEDIR/share/kde4/services/kded/

If you found the offending module, report a new bug for it, or add a comment here.
Comment 3 Jesse Milette 2011-01-21 01:57:32 UTC
there are two offending modules, they are:

Kubuntu's notification helper,
Muon Notifier

Muon's notifier is actually based on kpackagekit if I remember right, so if you are using kpackagekit the Kpackagekit notifier should be one.

Neither are KDE's problem so I guess this bug would be invalid?
Comment 4 Christoph Feck 2011-01-21 02:18:39 UTC
Well, Muon and KPackageKit bugs are tracked in the KDE bugtracker, but lets wait what Robby or other people find. I have seen this occasionally, too, but I do not use any of those notifiers. Right now, I cannot reproduce it.

Adding Muon maintainer so that he can have a look. He is also part of the  Kubuntu team, so maybe he can check the other notifier, too.
Comment 5 Jonathan Thomas 2011-01-21 02:30:49 UTC
The two notifier modules share the same core design. I'll track this in the Muon product here, and fix the problem in the Kubuntu notifier once I find/fix it in Muon.
Comment 6 Jonathan Thomas 2011-01-21 03:28:39 UTC
Git commit c1e24dca77f42ee8b00d6cb274dac7838803123c by Jonathan Thomas
Pushed by jmthomas into branch master

Somehow running a python script directly without calling python /path/to/script causes zombie processes on exit.
The Kubuntu Notification Helper also runs a different python application directly, so I shall fix it there too.

BUG:263790

M  +1    -1    kded/distupgradeevent/distupgradeevent.cpp     

http://commits.kde.org/f941090a/c1e24dca77f42ee8b00d6cb274dac7838803123c
Comment 7 Jonathan Thomas 2011-01-21 03:29:47 UTC
Git commit 90dbeaa6afeff295baf360d99aa10b7d1af1e670 by Jonathan Thomas
Pushed by jmthomas into branch 1.1

Somehow running a python script directly without calling python /path/to/script causes zombie processes on exit.
The Kubuntu Notification Helper also runs a different python application directly, so I shall fix it there too.

BUG:263790

M  +1    -1    kded/distupgradeevent/distupgradeevent.cpp     

http://commits.kde.org/f941090a/90dbeaa6afeff295baf360d99aa10b7d1af1e670
Comment 8 Jonathan Thomas 2011-01-21 03:33:11 UTC
There definitely was a fault in the Muon Notifier (or at least python) that was causing zombie processes while using it. As you can see, I've patched git master and the 1.1 branch of muon with this fix.

The memory leak also reported is unrelated to the zombie processes, as zombie processes are processes that have had all their memory deallocated and such, but still have a process ID due to not having been reaped.

Other zombie process issues in kded4 are likely different bugs. (Though maybe could be of the same shade, with funky KProcess behavior being the culprit)