Somehow running a python script directly without calling python /path/to/script causes zombie processes on exit. The Kubuntu Notification Helper also runs a different python application directly, so I shall fix it there too.

BUG:263790